--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
   
   --bg: var(--light);
   --text-on-bg: var(--black);
-  --text-on-primary: var(--light)
+  --text-on-primary: var(--light);
   --text-on-secondary: var(--light);
   --border-color: var(--gray-1);
   --border: 1px solid var(--border-color);
@@ -28,6 +28,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Inter', sans-serif !important;
   color: var(--text-on-bg);
   background-color: var(--bg)
@@ -56,3 +57,64 @@ body {
   border-radius: 4px;
   border: 1px solid black;
 }
+
+/*
+------ 
+Navbar
+------ 
+*/
+
+.navbar {
+  background-color: black;
+  opacity: 0.7;
+  padding-top: 0;
+  padding-bottom: 0;
+  border-bottom: 1px solid red;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+ul {
+  margin: 0;
+  display:flex;
+  list-style: none;
+  padding: 20px;
+}
+
+.navItem {
+color: red;
+padding: 30px 30px;
+text-decoration: none;
+}
+
+.toggle-collapse {
+  background: transparent;
+  float: right;
+  display: none;
+  color: red;
+  border: none;
+  font-size: 40px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+@media (max-width: 644px) {
+  .toggle-collapse {
+    display: inline-block;
+  }
+  ul {
+    display: block;
+  }
+  .navbar-collapse {
+    width: 100%;
+    overflow: hidden;
+    text-align: center;
+    height: 0px;
+    transition: all 499ms ease;
+  }
+}
+.collapse {
+  height: 50%;
+}
+
