New team section

--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
   --blue-light: #4bc0c8;
   --pink: #c779d0;
   --orange: #050404;
-  --gray-1: #eaeaea;
+  --gray-1: #dfdede;
 
   --graient-default: linear-gradient(to right, #feac5e, #c779d0, #4bc0c8);
 
@@ -32,12 +32,25 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
+p {
+  margin-top: 5px;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif !important;
   color: var(--text-on-bg);
   background-color: var(--bg)
+}
+
+.container {
+  padding: 50px 50px;
+  margin-bottom: 50px;
+}
+
+.d-flex {
+  display: flex;
 }
 
 /* Utilities */
@@ -136,11 +149,15 @@ text-decoration: none;
   cursor: pointer;
 }
 
-@media (max-width: 644px) {
+@media (max-width: 781px) {
   .toggle-collapse {
     display: inline-block;
   }
-  ul {
+  .nav-link {
+    display: block;
+    padding: 20px;
+  }
+  .navbar-nav {
     display: block;
   }
   .navbar-collapse {
@@ -150,9 +167,75 @@ text-decoration: none;
     height: 0px;
     transition: all 499ms ease;
   }
+  .team-member {
+    display: block;
+  }
+  .container {
+    padding: 10px 30px;
+  }
+  .icon {
+    display: none;
+  }
 }
 
 .collapse {
   height: 50%;
 }
+
+/*
+-------------
+Meet our team
+-------------
+*/
+hr {
+  width: 20%;
+  border: var(--border);
+}
+.sectionHeader {
+  padding: 20px;
+  font-weight: 500;
+  font-size: 2rem;
+}
+
+.img-fluid {
+  object-fit: cover;
+  width: 250px;
+  height: 250px;
+  display: block;
+  box-shadow: 0 8px 30px rgba( 0, 0, 0, 0.2);
+}
+
+.center-img {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+
+}
+
+.rounded {
+  border-radius: 50%;
+}
+
+.teamHeader {
+  padding: 5px 0;
+  opacity: 0.5;
+  color: var(--blue);
+  font-weight: 200;
+}
+
+.teamName {
+  padding: 10px 0;
+  font-weight: 500;
+}
+
+.teamName::after {
+  content: " ";
+    display: block;
+    width: 70px;
+    height: 1px;
+    margin: 10px 0 10px;
+    background: var(--blue);
+    opacity: 0.5;
+}
+
 
