--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import './css/spacing.css';
 :root {
   --black: #121212;
   --light: #f6f6f6;
@@ -23,6 +24,9 @@
   --font: 'Inter', sans-serif !important;
   --easing: cubic-bezier(0.4, 0, 0.2, 1);
   --shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
+}
+a {
+  text-decoration: none;
 }
 
 * {
@@ -70,6 +74,7 @@ body {
 /* UI Elements */
 
 .button {
+  cursor: pointer;
   margin: 0;
   padding: 0;
   padding: 0.6rem 1rem;
@@ -81,6 +86,26 @@ body {
   color: white;
   border-radius: 4px;
   border: 1px solid black;
+  transition: all 0.2s var(--easing);
+  transition-property: border, background-color, color;
+}
+.button.small {
+  padding: 0.3rem 0.5rem;
+  font-size: 0.8rem;
+}
+
+.button-primary {
+  color: var(--text-on-primary);
+  background-color: var(--primary);
+  border-color: var(--primary);
+}
+.button:hover {
+  background-color: var(--bg);
+  color: var(--text-on-bg);
+}
+.button-primary:hover {
+  background-color: var(--bg);
+  color: var(--primary);
 }
 
 /*
@@ -90,6 +115,7 @@ Text
 */
 
 .text-center {
+  text-align: center;
   align-items: center;
 }
 
