--- a/main.css
+++ b/main.css
@@ -287,3 +287,21 @@ hr {
   background: var(--blue);
   opacity: 0.5;
 }
+
+@media only screen and (min-width: 75em) {
+  .container {
+    width: 65rem !important;
+  }
+}
+
+@media only screen and (min-width: 75em) {
+  .container {
+    width: 65rem !important;
+  }
+}
+
+@media only screen and (min-width: 85em) {
+  .container {
+    width: 75rem !important;
+  }
+}
