--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@
   --text-on-bg: var(--black);
   --text-on-primary: var(--light);
   --text-on-secondary: var(--light);
+  --text-on-dark: var(--light);
   --border-color: var(--gray-1);
   --border: 1px solid var(--border-color);
 
@@ -152,10 +153,56 @@ Text
 /* Hero */
 
 .hero {
-  height: 500px;
-  background-color: #feac5e;
+  height: 600px;
+}
+@media only screen and (min-width: 768px) {
+  .hero {
+    height: 700px;
+  }
+}
+.hero-fade {
+  /* position: absolute;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 100%;
+  background: linear-gradient(to right, transparent 10%, var(--black) 100%);
+  width: 100px; */
+}
+.hero-brand {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background: black;
+}
+.hero-brand::after {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 70%;
+  transform: translateX(-70%);
+  height: 100%;
+  background: linear-gradient(to right, transparent 0%, black 100%);
+  width: 300px;
 }
 
+.hero-brand img {
+  width: 70%;
+  height: 100%;
+  object-fit: cover;
+}
+.hero-brand .hero-text {
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  right: 2rem;
+  transform: translateY(-50%);
+  color: var(--text-on-dark);
+}
+.hero-text .hero-title {
+  font-size: 4rem;
+  color: var(--text-on-dark);
+}
 /*
 ----------
 Responsive
@@ -216,19 +263,18 @@ Animations
 */
 .fade {
   transition: all 0.5s ease-in;
-  transition-property: opacity,transform;
+  transition-property: opacity, transform;
 }
 
-.fadeOut { 
-  opacity: 0; 
+.fadeOut {
+  opacity: 0;
   transform: translateY(30px);
 }
 
-.fadeIn { 
-  opacity: 1; 
+.fadeIn {
+  opacity: 1;
   transform: translateY(0px);
 }
-
 
 /*
 ------ 
@@ -244,7 +290,7 @@ Navbar
   border-bottom: 1px solid var(--border-color);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 999;
   backdrop-filter: saturate(180%) blur(5px);
 }
 
@@ -383,6 +429,5 @@ Contact us
 
 textarea {
   max-width: 100%;
-  min-width: 100%; 
+  min-width: 100%;
 }
-
