--- a/main.css
+++ b/main.css
@@ -265,7 +265,8 @@ Text
   }
 
   .hero-text {
-    width: 40%;
+    /* width: 40%; */
+    max-width: 600px;
     right: 2rem;
     top: 50%;
     bottom: unset;
