--- a/main.css
+++ b/main.css
@@ -165,6 +165,15 @@ body {
   }
 }
 
+input:focus,
+textarea:focus {
+  box-shadow: var(--shadow);
+}
+
+input, textarea {
+  transition: 0.2s;
+}
+
 /*
 ----
 Text
@@ -625,4 +634,8 @@ Responsive
   .container {
     width: 75rem !important;
   }
+}
+
+@media (max-width: 651px) {
+
 }
