--- a/main.css
+++ b/main.css
@@ -40,10 +40,6 @@ section {
   scroll-snap-align: start;
 }
 
-main {
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-}
 
 h1,
 h2,
@@ -58,6 +54,11 @@ h6 {
 
 p {
   margin-top: 5px;
+}
+
+html {
+  scroll-snap-type: y proximity;
+  scroll-padding-top: 5vh;
 }
 
 body {
@@ -209,6 +210,7 @@ Text
 .hero {
   height: 600px;
   position: relative;
+  scroll-snap-type: start;
 }
 @media only screen and (min-width: 768px) {
   .hero {
